[package]
name = "umpl"
version = "0.9.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/mendelsshop/umpl"
keywords = ["umpl", "umpl-lang"]
categories = ["language", "lang"]
description = "Umple is a a meme language that is a mix of c like languages and lisp like languages."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unic-emoji-char = "0.9.0"
hexponent = "0.3.1"
log4rs = "1.1.1"
log = "0.4.17"
lazy_static = "1.4.0"