[package]
name = "umpl-beta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# default = ["multi-threaded"]
multi-threaded = []

[dependencies]
hexponent = "0.3.1"
unic-emoji-char = "0.9.0"
parse_int = "0.6.0"